# haushalts_server

./: Cargo.toml  Rocket.toml  build.sh
src/: main.rs
static/: example.json  zustande.json
