[package]
name = "haushalts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
#rocket_contrib = "0.4.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"


